--- a/package.xml
+++ b/package.xml
@@ -41,7 +41,10 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>moveit_msgs</build_depend>
+  <build_depend>yumi_demos</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>trajectory_msgs</build_depend>
   <build_depend>actionlib</build_depend>
   <build_depend>perception_manager</build_depend>
   <build_depend>cv_bridge</build_depend>
@@ -55,9 +58,12 @@
   <run_depend>std_msgs</run_depend>
   <run_depend>cv_bridge</run_depend>
   <run_depend>actionlib</run_depend>
+  <run_depend>trajectory_msgs</run_depend>
+  <run_depend>moveit_msgs</run_depend>
   <run_depend>actionlib_msgs</run_depend>
   <run_depend>yumi_eneroth_bridge</run_depend>
   <run_depend>message_runtime</run_depend>
+  <run_depend>yumi_demos</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
