Leap motion sensor based control has been added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ find_package(catkin REQUIRED COMPONENTS
   message_generation
   trajectory_msgs
   moveit_msgs
+  tf
 )
 
 find_package(OpenCV REQUIRED)
@@ -146,6 +147,7 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
  add_executable(lego_manager_node src/lego_manager_node.cpp)
+ add_executable(leap_manager_node src/leap_manager_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -156,9 +158,13 @@ include_directories(
 ## Add cmake target dependencies of the executable
 ## same as for the library above
  add_dependencies(lego_manager_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+ add_dependencies(leap_manager_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
  target_link_libraries(lego_manager_node
+   ${catkin_LIBRARIES} ${OpenCV_LIBRARIES}
+ )
+target_link_libraries(leap_manager_node
    ${catkin_LIBRARIES} ${OpenCV_LIBRARIES}
  )
 
