--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package>
   <name>yumi_manager</name>
-  <version>0.0.0</version>
+  <version>1.0.0</version>
   <description>The yumi_manager package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="fact@todo.todo">fact</maintainer>
+  <maintainer email="hkarao@kth.se">hakan karaoguz</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -50,6 +50,7 @@
   <build_depend>cv_bridge</build_depend>
   <build_depend>yumi_eneroth_bridge</build_depend>
   <build_depend>rospy</build_depend>
+  <build_depend>tf</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>actionlib_msgs</build_depend>
   <run_depend>geometry_msgs</run_depend>
@@ -64,6 +65,7 @@
   <run_depend>yumi_eneroth_bridge</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>yumi_demos</run_depend>
+  <run_depend>tf</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
