Visualization of workspace has been added. Package structure has been fixed.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ find_package(catkin REQUIRED COMPONENTS
   trajectory_msgs
   moveit_msgs
   tf
+  ros_cpp_utils
 )
 
 find_package(OpenCV REQUIRED)
