Added leap functionality under leap_manager. Added a launch file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -148,9 +148,10 @@ include_directories(
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
  add_executable(lego_manager_node src/yumi_manager/lego_manager_node.cpp)
- add_executable(leap_manager_node src/yumi_manager/leap_manager_node.cpp)
+ #add_executable(leap_manager_node src/yumi_manager/leap_manager_node.cpp)
  add_executable(unknown_object_manager_node src/yumi_manager/unkown_object_manager_node.cpp)
 add_executable(test_manager_node src/yumi_manager/test_node.cpp include/yumi_manager/yumi_manager.h src/yumi_manager/yumi_manager.cpp)
+add_executable(leap_manager_node src/yumi_manager/leap_manager.cpp include/yumi_manager/yumi_manager.h src/yumi_manager/yumi_manager.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
