--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,61 +23,15 @@ find_package(catkin REQUIRED COMPONENTS
   ros_cpp_utils
 )
 
-find_package(OpenCV REQUIRED)
-
-## System dependencies are found with CMake's conventions
-# find_package(Boost REQUIRED COMPONENTS system)
-
-
-## Uncomment this if the package has a setup.py. This macro ensures
-## modules and global scripts declared therein get installed
-## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
-# catkin_python_setup()
-
-################################################
-## Declare ROS messages, services and actions ##
-################################################
-
-## To declare and build messages, services or actions from within this
-## package, follow these steps:
-## * Let MSG_DEP_SET be the set of packages whose message types you use in
-##   your messages/services/actions (e.g. std_msgs, actionlib_msgs, ...).
-## * In the file package.xml:
-##   * add a build_depend tag for "message_generation"
-##   * add a build_depend and a run_depend tag for each package in MSG_DEP_SET
-##   * If MSG_DEP_SET isn't empty the following dependency has been pulled in
-##     but can be declared for certainty nonetheless:
-##     * add a run_depend tag for "message_runtime"
-## * In this file (CMakeLists.txt):
-##   * add "message_generation" and every package in MSG_DEP_SET to
-##     find_package(catkin REQUIRED COMPONENTS ...)
-##   * add "message_runtime" and every package in MSG_DEP_SET to
-##     catkin_package(CATKIN_DEPENDS ...)
-##   * uncomment the add_*_files sections below as needed
-##     and list every .msg/.srv/.action file to be processed
-##   * uncomment the generate_messages entry below
-##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
+find_package(OpenCV 3 REQUIRED)
 
 ## Generate messages in the 'msg' folder
 add_message_files(
    FILES
    SceneObjects.msg
-#   Message2.msg
+
  )
 
-## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
-
-## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
 
 ## Generate added messages and services with any dependencies listed here
  generate_messages(
@@ -86,25 +40,6 @@ add_message_files(
    std_msgs
  )
 
-################################################
-## Declare ROS dynamic reconfigure parameters ##
-################################################
-
-## To declare and build dynamic reconfigure parameters within this
-## package, follow these steps:
-## * In the file package.xml:
-##   * add a build_depend and a run_depend tag for "dynamic_reconfigure"
-## * In this file (CMakeLists.txt):
-##   * add "dynamic_reconfigure" to
-##     find_package(catkin REQUIRED COMPONENTS ...)
-##   * uncomment the "generate_dynamic_reconfigure_options" section below
-##     and list every .cfg file to be processed
-
-## Generate dynamic reconfigure parameters in the 'cfg' folder
-# generate_dynamic_reconfigure_options(
-#   cfg/DynReconf1.cfg
-#   cfg/DynReconf2.cfg
-# )
 
 ###################################
 ## catkin specific configuration ##
@@ -117,9 +52,7 @@ add_message_files(
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
    INCLUDE_DIRS include
-#  LIBRARIES yumi_manager
-# CATKIN_DEPENDS geometry_msgs perception_manager rospy std_msgs
-#  DEPENDS system_lib
+   CATKIN_DEPENDS geometry_msgs perception_manager rospy std_msgs ros_cpp_utils
 )
 
 ###########
@@ -139,44 +72,27 @@ include_directories(
 #   src/${PROJECT_NAME}/yumi_manager.cpp
 # )
 
-## Add cmake target dependencies of the library
-## as an example, code may need to be generated before libraries
-## either from message generation or dynamic reconfigure
-# add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
-## Declare a C++ executable
-## With catkin_make all packages are built within a single CMake context
-## The recommended prefix ensures that target names across packages don't collide
- add_executable(lego_manager_node src/yumi_manager/lego_manager_node.cpp)
- #add_executable(leap_manager_node src/yumi_manager/leap_manager_node.cpp)
- add_executable(unknown_object_manager_node src/yumi_manager/unkown_object_manager_node.cpp)
+#add_executable(lego_manager_node src/yumi_manager/lego_manager_node.cpp)
+#add_executable(leap_manager_node src/yumi_manager/leap_manager_node.cpp)
+#add_executable(unknown_object_manager_node src/yumi_manager/unkown_object_manager_node.cpp)
 add_executable(test_manager_node src/yumi_manager/test_node.cpp include/yumi_manager/yumi_manager.h src/yumi_manager/yumi_manager.cpp)
 add_executable(leap_manager_node src/yumi_manager/leap_manager.cpp include/yumi_manager/yumi_manager.h src/yumi_manager/yumi_manager.cpp)
 
-## Rename C++ executable without prefix
-## The above recommended prefix causes long target names, the following renames the
-## target back to the shorter version for ease of user use
-## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
-# set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")
+
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
- add_dependencies(lego_manager_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
- add_dependencies(leap_manager_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
- add_dependencies(unknown_object_manager_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
- add_dependencies(test_manager_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} )
+#add_dependencies(lego_manager_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(leap_manager_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+#add_dependencies(unknown_object_manager_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
+add_dependencies(test_manager_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} )
 
 ## Specify libraries to link a library or executable target against
- target_link_libraries(lego_manager_node
-   ${catkin_LIBRARIES} ${OpenCV_LIBRARIES}
- )
 target_link_libraries(leap_manager_node
    ${catkin_LIBRARIES} ${OpenCV_LIBRARIES}
  )
 
-target_link_libraries(unknown_object_manager_node
-   ${catkin_LIBRARIES} ${OpenCV_LIBRARIES}
- )
 target_link_libraries(test_manager_node
    ${catkin_LIBRARIES} ${OpenCV_LIBRARIES}
  )
