--- a/package.xml
+++ b/package.xml
@@ -5,7 +5,7 @@
   <description>The yumi_manager package</description>
 
 
-  <maintainer email="hkarao@kth.se">hakan karaoguz</maintainer>
+  <maintainer email="hkarao@kth.se">Hakan Karaoguz</maintainer>
 
 
 
@@ -21,7 +21,7 @@
   <build_depend>trajectory_msgs</build_depend>
   <build_depend>actionlib</build_depend>
   <build_depend>perception_manager</build_depend>
-  <build_depend>ros_cpp_tools</build_depend>
+  <build_depend>ros_cpp_utils</build_depend>
   <build_depend>cv_bridge</build_depend>
   <build_depend>yumi_eneroth_bridge</build_depend>
   <build_depend>rospy</build_depend>
@@ -41,7 +41,7 @@
   <run_depend>message_runtime</run_depend>
   <run_depend>yumi_demos</run_depend>
   <run_depend>tf</run_depend>
-  <run_depend>ros_cpp_tools</run_depend>
+  <run_depend>ros_cpp_utils</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
